release: prepare rust-java-rest 3.1.0-rc5